<resources>
    <string name="app_name">Ekottel</string>
    <string name="app_name_capitel">EKOTTEL</string>
    <string name="recent_details_date_today">Today</string>
    <string name="recent_details_date_yesterday">Yesterday</string>
    <string name="support_terms_conditions">Terms &amp; Conditions</string>
    <string name="icon_contacts">&#xf2b9;</string>
    <string name="icon_call_logs">&#xf1da;</string>
    <string name="icon_messages">&#xf27a;</string>
    <string name="icon_profile">&#xf007;</string>
    <string name="icon_more">&#xf141;</string>
    <string name="icon_fill_circle">&#xf111;</string>
    <string name="icon_circle">&#xf10c;</string>
    <string name="signup_flag">&#xf024;</string>
    <string name="signup_mobile">&#xf10b;</string>
    <string name="signup_arrow_down">&#xf078;</string>
    <string name="status_camera">&#xf030;</string>
    <string name="country_search">&#xf002;</string>
    <string name="search_cancel">&#xf057;</string>
    <string name="contacts_details_back_arrow">&#xf060;</string>
    <string name="contacts_details_edit_contact">&#xf040;</string>
    <string name="dialpad_call">&#xf095;</string>
    <string name="contact_chat">&#xf075;</string>
    <string name="contact_more">&#xf142;</string>
    <string name="contact_details">&#xf2b9;</string>
    <string name="contact_invite">&#xf1d8;</string>
    <string name="chat_arrow_right">&#xf054;</string>
    <string name="chat_image_transfer">&#xf1c5;</string>
    <string name="chat_file_transfer">&#xf15b;</string>
    <string name="chat_voice_transfer">&#xf130;</string>
    <string name="info">&#xf05a;</string>
    <string name="download">&#xf019;</string>
    <string name="chat_location">&#xf041;</string>
    <string name="chat_contact">&#xf2b9;</string>
    <string name="login_password_hide">&#xf070;</string>
    <string name="login_password_show">&#xf06e;</string>
    <string name="recents_delete">&#xf1f8;</string>
    <string name="contact_details_email">&#xf0e0;</string>
    <string name="dialpad_add_contact">&#xf234;</string>
    <string name="chat_copy_text">&#xf0ea;</string>
    <string name="chat_play">&#xf04b;</string>
    <string name="chat_pause">&#xf04c;</string>
    <string name="audio_download">&#xf01a;</string>
    <string name="chat_forward">&#xf064;</string>
    <string name="video_call_icon">&#xf03d;</string>
    <string name="help_screen_next">Next</string>
    <string name="help_screen_skip">Skip</string>
    <string name="location_settings">Location settings</string>
    <string name="gps_not_enable">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="location_not_found">Location not found</string>
    <string name="splash_version_name">Powered by\nH&amp;N MARKETING AND COMMUNICATION \n2021</string>
    <string name="splash_version_number">V 1.0.0</string>
    <string name="splash_version_number_single">V</string>
    <string name="splash_network_message">Please make sure your Network Connection is ON</string>
    <string name="splash_network_alert_settings">Settings</string>
    <string name="splash_network_alert_ok">OK</string>
    <string name="splash_pref_is_already_login">isLogin</string>
    <string name="splash_pref_network_status">NetworkStatus</string>
    <string name="help_screen_prf_more">More</string>
    <string name="notification_title">Ekottel</string>
    <string name="add_message_pref_balance">balance</string>
    <string name="add_message_header_name">Contacts</string>
    <string name="add_message_no_contacts_found_message">No Contacts Found</string>
    <string name="bal_trans_tag">BalanceTransferActivity</string>
    <string name="bal_trans_pref_balance">balance</string>
    <string name="bal_trans_pref_app_compat">AppContact</string>
    <string name="bal_trans_mobile_not_empty">mobile number shouldn\'t be empty</string>
    <string name="bal_trans_credits_not_empty">credits shouldn\'t be empty</string>
    <string name="bal_trans_mobile_valid">mobile number should be valid</string>
    <string name="bal_trans_credits_valid">credits should be valid</string>
    <string name="bal_trans_network_unavail">Network Unavailable</string>
    <string name="bal_trans_success">Balance transfer done</string>
    <string name="bal_trans_success_message1">Balance transfer successfully sent to</string>
    <string name="bal_trans_success_message2">with credit of</string>
    <string name="bal_trans_response_message_key">data</string>
    <string name="bal_trans_response_message_value">message</string>
    <string name="bal_trans_response_error_message_key">error</string>
    <string name="bal_trans_time_out">Timeout.Pls Retry..</string>
    <string name="bal_trans_wait_message">Please wait..</string>
    <string name="balance_transfered_successful">BalanceTransferd</string>
    <string name="bal_trans_pref_avail_message">AvailBal</string>
    <string name="bal_trans_http_api_message">API</string>
    <string name="bal_trans_http_data_message">Data</string>
    <string name="bal_trans_balance_transfer_message">balancetransfer</string>
    <string name="bal_trans_balance_transfer_success_message">Balance transfer done For $</string>
    <string name="balance_transfer_failed">Oops! Balance transfer failed</string>
    <string name="bal_trans_valid_message">valid</string>
    <string name="bal_trans_ok_message">Ok</string>
    <string name="bal_trans_header_name">Balance Transfer</string>
    <string name="bal_trans_credits_to_message">Transfer Credits to</string>
    <string name="bal_trans_enter_number_message">Enter mobile number with +</string>
    <string name="bal_trans_hint_mobile_number_message">Mobile Number</string>
    <string name="bal_trans_hint_credits_message">Enter Credits</string>
    <string name="bal_trans_transfer_credit_message">Transfer Credit</string>
    <string name="call_logs_tag">CallLogsActivity</string>
    <string name="call_logs_pref_make_call">CallLogsMakeCall</string>
    <string name="call_logs_all_message">All</string>
    <string name="call_logs_missed_message">Missed</string>
    <string name="call_logs_no_call_logs_message">updatenologtext</string>
    <string name="call_logs_pref_gsm_key">isGSMCall</string>
    <string name="call_logs_intent_dntnum_key">dstnumber</string>
    <string name="call_logs_intent_stream_subscr_key">streamdescription</string>
    <string name="call_logs_intent_initiator_key">isinitiatior</string>
    <string name="call_logs_invalid_number">No valid Number</string>
    <string name="call_logs_date_format">dd MMM yyyy, EEEE</string>
    <string name="call_logs_delete_single_history_message">Delete Single History</string>
    <string name="call_logs_add_contact_message">Add Contact</string>
    <string name="call_logs_out_going_message">OUTGOING</string>
    <string name="call_logs_in_coming_message">INCOMING</string>
    <string name="call_logs_hours_format">hh:mm a</string>
    <string name="call_logs_incall_message">isInCall</string>
    <string name="call_running_error_message">Can\'t place a new call while you\'re already in a call</string>
    <string name="call_logs_intent_sender_key">Sender</string>
    <string name="call_logs_intent_is_group_key">IS_GROUP</string>
    <string name="call_logs_details_outgoing_audio">outgoing</string>
    <string name="call_logs_details_incoming_audio">incoming</string>
    <string name="call_logs_details_outgoing_video">outgoing</string>
    <string name="call_logs_details_incoming_video">incoming</string>
    <string name="call_logs_details_missed_audio">missed</string>
    <string name="call_logs_details_missed_video">missed</string>
    <string name="call_logs_confirmation_message">Confirmation</string>
    <string name="call_logs_delete_all_message">Delete All History?</string>
    <string name="call_logs_missed_call_message">Delete Missed Call History?</string>
    <string name="call_logs_hint_search_message">Search</string>
    <string name="call_logs_all_calls_message">All Calls</string>
    <string name="call_logs_missed_calls_message">Missed Calls</string>
    <string name="call_logs_no_call_logs_msg">No Call Logs</string>
    <string name="call_logs_popup_exit_message">Exit</string>
    <string name="call_screen_dstnum">sDstMobNu</string>
    <string name="call_screen_callid">callid</string>
    <string name="call_screen_call_active">callactive</string>
    <string name="call_screen_sdp">sdp</string>
    <string name="call_screen_call_type">callType</string>
    <string name="call_screen_src_number">srcnumber</string>
    <string name="call_screen_call_start_time">callstarttime</string>
    <string name="call_screen_call_type_video">video</string>
    <string name="call_screen_call_type_audio">audio</string>
    <string name="call_screen_incoming_video_call_message">Incoming Video Call</string>
    <string name="call_screen_incoming_audio_call_message">Incoming Audio Call</string>
    <string name="call_screen_incoming_pstn_call_message">Incoming PSTN Call</string>
    <string name="call_screen_incoming_call_message">Incoming Call</string>
    <string name="call_screen_initiator">isinitiatior</string>
    <string name="Front_Camera_Not_Available">Your device do not have Front Camera to switch</string>
    <string name="call_screen_call_end_message">CallEnd Failed</string>
    <string name="chat_screen_tag">ChatActivity</string>
    <string name="chat_screen_hint_type_message">Type a Message...</string>
    <string name="chat_screen_intent_contact_id">Contactlist_contactID</string>
    <string name="chat_screen_intent_is_app_contact">Contactlist_isapp_contact</string>
    <string name="iscameFromAllContacts">iscameFromAllContacts</string>
    <string name="chat_screen_enter_message">Please enter a message</string>
    <string name="chat_screen_audio_message">AudioRecording.aac</string>
    <string name="chat_screen_audio_start_message">Recording started</string>
    <string name="chat_screen_intent_dntnum_key">dstnumber</string>
    <string name="chat_screen_intent_stream_subscr_key">streamdescription</string>
    <string name="chat_screen_intent_initiator_key">isinitiatior</string>
    <string name="chat_screen_alert_send">SEND</string>
    <string name="chat_screen_alert_cancel">CANCEL</string>
    <string name="chat_screen_alert_message">Do you want to share this audio</string>
    <string name="chat_screen_image_date_format">yyyyMMdd_HHmmss</string>
    <string name="status_activity_add_status">Add Status</string>
    <string name="status_activity_in_meeting">In a Meeting</string>
    <string name="alert_dialog_title">Alert</string>
    <string name="alert_dialog_message">Do you really want to exit the app?</string>
    <string name="alert_dialog_btn_no">No</string>
    <string name="alert_dialog_btn_yes">Yes</string>
    <string name="alert_info_btn_ok">OK</string>
    <string name="auto_logout_alert_dialog_message">Your account on this device will be logged out as this number is registered on other device.</string>
    <string name="location_alert_message">Do you want to share this location ?</string>
    <string name="location_alert_btn_cancel">Cancel</string>
    <string name="location_alert_btn_yes">Yes</string>
    <string name="profile_available_message">Available</string>
    <string name="profile_available_busy">Busy</string>
    <string name="profile_available_send_me_message">Send me a Message</string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="paypal_mode">Paypal</string>
    <string name="stripe_tag">Visa/Master card</string>
    <string name="topup_5">5</string>
    <string name="topup_10">10</string>
    <string name="topup_20">20</string>
    <string name="topup_50">50</string>
    <string name="topup_100">100</string>
    <string name="topup_500">500</string>
</resources>