<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_location_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/ubuntu_regular"
        android:padding="@dimen/_15dp"
        android:textColor="@color/black_50"
        android:text="@string/location_alert_message"
        android:textSize="@dimen/text_16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15dp"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginTop="@dimen/_15dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_location_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35dp"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:background="@drawable/alert_dialog_no_bg"
            android:text="@string/location_alert_btn_cancel"
            android:fontFamily="@font/ubuntu_regular"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_location_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_regular"
            android:textAllCaps="true"
            android:background="@drawable/alert_dialog_yes_bg"
            android:text="@string/location_alert_btn_yes"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>