<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/status_popup_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_add_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8dp">



            <TextView
                android:id="@+id/tv_add_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8dp"
                android:text="@string/status_activity_add_status"
                android:textColor="#303030"
                android:textSize="@dimen/_14dp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b2b2b2"></View>

        <LinearLayout
            android:id="@+id/ll_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8dp">



            <TextView
                android:id="@+id/tv_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8dp"
                android:text="@string/profile_available_message"
                android:textColor="#303030"
                android:textSize="@dimen/_14dp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b2b2b2"></View>

        <LinearLayout
            android:id="@+id/ll_busy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8dp">



            <TextView
                android:id="@+id/tv_busy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8dp"
                android:text="@string/profile_available_busy"
                android:textColor="#303030"
                android:textSize="@dimen/_14dp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b2b2b2"></View>

        <LinearLayout
            android:id="@+id/ll_send_me_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8dp">



            <TextView
                android:id="@+id/tv_send_me_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8dp"
                android:text="@string/profile_available_send_me_message"
                android:textColor="#303030"
                android:textSize="@dimen/_14dp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b2b2b2"></View>

        <LinearLayout
            android:id="@+id/ll_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8dp">



            <TextView
                android:id="@+id/tv_in_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8dp"
                android:text="@string/status_activity_in_meeting"
                android:textColor="#303030"
                android:textSize="@dimen/_14dp" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>