<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_alert_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10dp"
            android:text="@string/alert_dialog_title"
            android:fontFamily="@font/ubuntu_medium"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_below="@+id/txt_alert"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:background="@color/colorAccent" />


        <TextView
            android:id="@+id/tv_alert_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2dp"
            android:layout_marginRight="@dimen/_2dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/_25dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/alert_dialog_message"
            android:textColor="@color/black_30"
            android:textSize="@dimen/text_14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_layout"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_20dp">

        <Button
            android:id="@+id/btn_alert_cancel"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_35dp"
            android:layout_gravity="bottom"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_weight="1"
            android:background="@drawable/alert_dialog_no_bg"
            android:gravity="center"
            android:padding="@dimen/_7dp"
            android:text="@string/alert_dialog_btn_no"
            android:fontFamily="@font/ubuntu_regular"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />

        <Button
            android:id="@+id/btn_alert_ok"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_35dp"
            android:fontFamily="@font/ubuntu_regular"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_weight="1"
            android:background="@drawable/alert_dialog_yes_bg"
            android:gravity="center"
            android:padding="@dimen/_7dp"
            android:text="@string/alert_dialog_btn_yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />
    </LinearLayout>

</LinearLayout>