<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:foo="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:background="@color/colorPrimary"
        foo:customFont="AvenirLT-Romon.ttf"
        android:gravity="center"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/select_payment_mode"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lyt_paypal_mode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_currency_simbole1"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20dp"
            android:src="@mipmap/paypal_icon" />


        <TextView

            android:id="@+id/tv_paypal_mode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_gravity="center"
            foo:customFont="AvenirLT-Romon.ttf"
            android:gravity="center|left"
            android:fontFamily="@font/ubuntu_regular"
            android:paddingLeft="@dimen/_30dp"
            android:text="@string/paypal_mode"
            android:textColor="@color/black" />


    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:background="@color/color_grayLight" />

    <LinearLayout
        android:id="@+id/lyt_in_app_mode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20dp"
            android:src="@mipmap/visa_mastercard" />


        <TextView
            android:id="@+id/tv_inapp_mode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_gravity="center"
            foo:customFont="AvenirLT-Romon.ttf"
            android:gravity="center|left"
            android:fontFamily="@font/ubuntu_regular"
            android:paddingLeft="@dimen/_30dp"
            android:text="@string/stripe_tag"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>